--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -4,7 +4,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-@media (min-width: 0px) and (max-width: 445px) {
+@media (min-width: 0px) and (max-width: 650px) {
 
   body {
     margin: 0px;
@@ -34,7 +34,7 @@
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display:grid;
-    grid-template-rows: 7% 43% 10% 30% 10%;
+    grid-template-rows: 7% 43% 40% 10%;
     grid-template-columns: 100%;
     grid-gap: .5rem;
     height: 85vh;
@@ -44,9 +44,8 @@
   #welcome{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
+    color: black;
     font-size: 12px;
-    
   }
 
   #imageContainer{
@@ -56,72 +55,47 @@
   }
 
   #profileImage{
-    max-width: 100%;
+    width: 100%;
+    height: 85%;
     object-fit: cover;
-    object-position: center; 
     border-radius: 10px;
     padding: 1rem;
     border: 3px solid rgba(90, 90, 90, 0.819);
   }
 
-  #imageUpload{
+  #userFields{
     grid-row: 3 / span 1;
     grid-column: 1 / span 1;
+    border-radius: 6px;
+    border: .5px solid grey;
+
+  }
+
+  #buttonForm{
     display: grid;
-    grid-template-rows: 100%;
+    grid-template-rows: 16.6% 16.6% 16.6% 16.6% 16.6% 16.6%;
     grid-template-columns: 50% 50%;
+    grid-gap: .2rem;
+    height: 30vh;
+    margin-right: .4rem;
   }
 
   #findImage{
-
     display:none;
-
   }
 
   .findImageStyle{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white;
+    color: black;
     border: 1px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
     padding-top: 5%;
-    padding-left: 2%;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-right: .5rem;;
     text-align: center;
   }
 
-  #uploadButton{
-    grid-row: 1 / span 1;
-    grid-column: 2 / span 1;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-left: .5rem;
-  }
-
-  #userFields{
-    grid-row: 4 / span 1;
-    grid-column: 1 / span 1;
-    border-radius: 6px;
-    border: .5px solid grey;
-  }
-
-  #buttonForm{
-    display: grid;
-    grid-template-rows: 20% 20% 20% 20% 20%;
-    grid-template-columns: 50% 50%;
-    grid-gap: .2rem;
-    height: 21vh;
-    margin-right: .4rem;
-  }
-
   #userFirstName{
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     grid-column: 1 / span 2;
     background-color: black;
     color: white;
@@ -130,7 +104,7 @@
   }
 
   #userLastName{
-    grid-row: 2 / span 1;
+    grid-row: 3 / span 1;
     grid-column: 1 / span 2;
     background-color: black;
     color: white;
@@ -140,7 +114,7 @@
   }
 
   #userEmail{
-    grid-row: 3 / span 1;
+    grid-row: 4 / span 1;
     grid-column: 1 / span 2;
     background-color: black;
     color: white;
@@ -151,7 +125,7 @@
 
   #userPassword{
     grid-column: 1 / span 2;
-    grid-row: 4 / span 1;
+    grid-row: 5 / span 1;
     background-color: black;
     color: white;
     border: 1px solid rgba(90, 90, 90, 0.819);
@@ -161,7 +135,7 @@
 
   #saveButton{
     grid-column: 1 / span 2;
-    grid-row: 5 / span 1;
+    grid-row: 6 / span 1;
     background-color: rgba(120, 195, 120, 0.713);
     color: white;
     border: 1px solid white;
@@ -169,7 +143,7 @@
   }
 
   #edit{
-    grid-row: 5 / span 1;
+    grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -179,8 +153,8 @@
   #editButton{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: .7rem;
+    margin-bottom: .7rem;
     margin-left: .5rem;
     margin-right: .5rem;
     background-color: rgba(90, 146, 180, 0.735);
@@ -209,7 +183,7 @@
 
 }
 
-@media (min-width: 446px) {
+@media (min-width: 651px) {
 
   body {
     margin: 0px;
@@ -232,23 +206,24 @@
   #container2{
     display: grid;
     grid-template-rows: 85% 1fr;
-    grid-template-columns: 1fr 70% 1fr;
+    grid-template-columns: 1fr 40% 1fr;
   }
 
   #container3{
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
     display:grid;
-    grid-template-rows: 10% 55% 10% 20% 10%;
+    grid-template-rows: 10% 55% 30% 10%;
     grid-template-columns: 100%;
     height: 85vh;
-  
+    max-width: 600px;
+    min-width: 450px;
   }
 
   #welcome{
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
-    color: white
+    color: black;
     
   }
 
@@ -266,51 +241,9 @@
     padding: 1rem;
     border: 3px solid rgba(90, 90, 90, 0.819);
   }
-
-  #imageUpload{
-    grid-row: 3 / span 1;
-    grid-column: 1 / span 1;
-    display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns: 50% 50%;
-  }
-
-  #findImage{
-
-    display:none;
-  }
-
-  .findImageStyle{
-    grid-row: 1 / span 1;
-    grid-column: 1 / span 1;
-    width:85%;
-    /* color: white; */
-    border: 1px solid rgba(90, 90, 90, 0.819);
-    border-radius: 6px;
-    padding-top: 3%;
-    padding-left: 2%;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-right: .5rem;;
-    text-align: center;
-  }
-
-  #uploadButton{
-    grid-row: 1 / span 1;
-    grid-column: 2 / span 1;
-    width: 88%;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color: rgba(120, 195, 120, 0.713);
-    color: white;
-    border: 1px solid white;
-    border-radius: 6px;
-    margin-left: .5rem;
-    
-  }
-
+  
   #userFields{
-    grid-row: 4 / span 1;
+    grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     border-radius: 6px;
     border: .5px solid grey;
@@ -320,15 +253,30 @@
 
   #buttonForm{
     display: grid;
-    grid-template-rows: 33% 33% 33%;
+    grid-template-rows: 25% 25% 25% 25%;
     grid-template-columns: 50% 50%;
-    height: 12vh;
+    height: 20vh;
     grid-gap: .5rem;
     margin-right: .4rem;
   }
 
-  #userFirstName{
+  #findImage{
+    display:none;
+  }
+
+  .findImageStyle{
     grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+    width:85%;
+    padding-top: 5%;
+    /* color: white; */
+    border: 1px solid rgba(90, 90, 90, 0.819);
+    border-radius: 6px;
+    text-align: center;
+  }
+
+  #userFirstName{
+    grid-row: 2 / span 1;
     grid-column: 1 / span 1;
     background-color: black;
     color: white;
@@ -337,28 +285,26 @@
   }
 
   #userLastName{
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     background-color: black;
     color: white;
     border: 1px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
-
   }
 
   #userEmail{
-    grid-row: 2 / span 1;
+    grid-row: 3 / span 1;
     grid-column: 1 / span 1;
     background-color: black;
     color: white;
     border: 1px solid rgba(90, 90, 90, 0.819);
     border-radius: 6px;
-
   }
 
   #userPassword{
     grid-column: 2 / span 1;
-    grid-row: 2 / span 1;
+    grid-row: 3 / span 1;
     background-color: black;
     color: white;
     border: 1px solid rgba(90, 90, 90, 0.819);
@@ -367,8 +313,8 @@
   }
 
   #saveButton{
-    grid-column: 1 / span 1;
-    grid-row: 3 / span 1;
+    grid-column: 1 / span 2;
+    grid-row: 4 / span 1;
     background-color: rgba(120, 195, 120, 0.713);
     color: white;
     border: 1px solid white;
@@ -376,7 +322,7 @@
   }
 
   #edit{
-    grid-row: 5 / span 1;
+    grid-row: 4 / span 1;
     grid-column: 1 / span 1;
     display: grid;
     grid-template-columns: 50% 50%;
@@ -412,6 +358,6 @@
     color:white;
     font-size: 23px;
     border:none;
-}
+  }
   
 }
