--- a/public/css/navbarFooter.css
+++ b/public/css/navbarFooter.css
@@ -63,7 +63,6 @@ nav a:hover {
 }
 
 #footer {
-
     bottom: 0;
     width: 100%;
     height: 50px;
@@ -72,4 +71,5 @@ nav a:hover {
     text-align: center;
     vertical-align: middle;
     padding-top: 1%;
+    margin-top: 7%;
 }
