--- a/public/css/userProfilePage.css
+++ b/public/css/userProfilePage.css
@@ -48,6 +48,15 @@
     font-size: 12px;
   }
 
+  img {
+    width: 90%;
+    height: 85%;
+    object-fit: cover;
+    border-radius: 10px;
+    padding: 1rem;
+    border: 3px solid rgba(90, 90, 90, 0.819);
+  }
+
   #imageContainer{
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
@@ -225,6 +234,15 @@
     grid-column: 1 / span 1;
     color: black;
     
+  }
+
+  img {
+    width: 90%;
+    height: 85%;
+    object-fit: cover;
+    border-radius: 10px;
+    padding: 1rem;
+    border: 3px solid rgba(90, 90, 90, 0.819);
   }
 
   #imageContainer{
